fix: bumping some deps