@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <dependency.version.jacoco>0.8.1</dependency.version.jacoco>
+        <dependency.version.jacoco>0.8.8</dependency.version.jacoco>
         <sonar-jacoco-listeners.version>3.2</sonar-jacoco-listeners.version>
         <jacoco.output.directory>${project.build.directory}/jacoco</jacoco.output.directory>
         <jacoco.report.directory>${project.build.directory}/jacoco-reports</jacoco.report.directory>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>br.com.ppm</groupId>
             <artifactId>ppm-commons</artifactId>
-            <version>2.1.0</version>
+            <version>2.1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -84,9 +84,21 @@
             <version>${dependency.version.jacoco}</version>
         </dependency>
         <dependency>
-            <groupId>br.com.ppm</groupId>
-            <artifactId>test-helper</artifactId>
-            <version>0.1.5</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.6.28</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -104,8 +116,8 @@
     </dependencyManagement>
 
     <build>
-        <sourceDirectory>/src/main/java</sourceDirectory>
-        <testSourceDirectory>/src/test/java</testSourceDirectory>
+<!--        <sourceDirectory>/src/main/java</sourceDirectory>-->
+<!--        <testSourceDirectory>/src/test/java</testSourceDirectory>-->
         <resources>
             <resource>
                 <directory>/src/main/resource</directory>
@@ -116,6 +128,14 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -133,6 +153,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -140,6 +163,7 @@
                 <version>2.10.4</version>
                 <configuration>
                     <additionalparam>-Xdoclint:none</additionalparam>
+                    <source>11</source>
                 </configuration>
                 <executions>
                     <execution>
@@ -199,9 +223,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.20.1</version>
+                        <version>2.22.2</version>
                         <configuration>
-                            <argLine>${jacoco.agent.ut.arg}</argLine>
+                            <argLine>${jacoco.agent.ut.arg} --illegal-access=permit</argLine>
                             <!-- Specific to generate mapping between tests and covered code -->
                             <properties>
                                 <property>
@@ -215,9 +239,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.20.1</version>
+                        <version>2.22.2</version>
                         <configuration>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg} --illegal-access=permit</argLine>
                             <!-- Specific to generate mapping between tests and covered code -->
                             <properties>
                                 <property>
